--- a/src/global.css
+++ b/src/global.css
@@ -1,17 +1,9 @@
-@tailwind base;
+/* Base CSS is already turned off in tailwind.config.js */
+/* @tailwind base;     */
 @tailwind components;
 @tailwind utilities;
 
-body {
+* {
+  font-family: "Roboto", sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
