added accordion for course detail pages

--- a/src/global.css
+++ b/src/global.css
@@ -70,3 +70,7 @@
   right: 0;
   /* position: absolute; */
 }
+
+/* .css-z9uefa-MuiButtonBase-root-MuiAccordionSummary-root {
+  padding: 0px 0px;
+} */
